css/style.css
:root{

    --mdc-theme-primary: #4e0d4e;
    --mdc-theme-secondary: black;
    --mdc-theme-background: black;
    --mdc-theme-surface: #0e0e0e;
    --mdc-theme-on-primary: #fff;
    --mdc-theme-on-secondary: #fff;
    --mdc-theme-on-surface: #fff;
    --mdc-theme-on-error: #fff;
    --mdc-theme-on-background: #fff;
}

html{
    background-color: var(--mdc-theme-background);
    color: var(--mdc-theme-on-background);
}
.mdc-card{
    background-color: var(--mdc-theme-surface);
    color: var(--mdc-theme-on-surface);
    padding: 16px;
}

*{

    /*Hide x overflow*/
    overflow-x: hidden;
}


/*Create title-bounce animation*/
@keyframes title-bounce{
    0%{
        transform: translateX(0);
    }
    25%{
        transform: translateX(10px);
    }
    50%{
        transform: translateX(0px);
    }
    75%{
        transform: translateX(-10px);
    }
    100%{
        transform: translateX(0);
    }
}

/*Title bouncing from left to right in a loop*/
.title{
    animation: title-bounce infinite 10s ease-in-out;
}

.flex-body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    /*Make the body flex-grow*/
    flex-grow: 1;

}

